--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -21,16 +21,22 @@
 		float: right;
         display: inline;
 	}
+    //课程标题
+    h2.coures-name-title {
+	   		line-height: 180%;font-size: 20px;overflow: hidden;padding-left: 10px;margin:0 0 10px 0;
+           em {font-size: 16px;color: #cc0000;}
+	   }
     //多个头像左右切换样式
         .ui_avatar_con {
                 float: left;
                 overflow: hidden;
+                margin-top:10px;
                 //老师头像区域样式
                 .ui_avatar {
                     float: left;
                     display: inline;
                     overflow: hidden;
-                    width: 150px;
+                    width: 369px;
                     height: 60px;
                     .avatar_items {
                         overflow: hidden;
@@ -38,17 +44,18 @@
                         li {
                             float: left;
                             display: inline;
-                            width: 150px;
+                            width: 123px;
                             a {
                                 float: left;
                                 display: block;
-                                width: 60px;
-                                height: 60px;
+                                width: 40px;
+                                height: 40px;
                                 overflow: hidden;
                                 border-radius: 50%;
+                                margin-top:10px;
                                 img {
-                                    width: 60px;
-                                    height: 60px;
+                                    width: 40px;
+                                    height: 40px;
                                 }
                             }
                             span {
@@ -56,7 +63,7 @@
                                 display: inline;
                                 line-height: 60px;
                                 margin-left: 5px;
-                                font-size: 14px;
+                                font-size: 12px;
                             }
                         }
                     }
@@ -130,11 +137,8 @@
 		// 课程信息汇总----中间
 
 	.course-center-list {
-	   width: 590px;overflow: hidden;margin-left: 10px;
-	   h2.coures-name-title {
-	   		line-height: 180%;font-size: 18px;overflow: hidden;padding-left: 10px;margin:10px 0;
-           em {font-size: 16px;color: #cc0000;}
-	   }
+	   width: 590px;height: 400px; overflow: hidden;margin-left: 10px;position: relative;
+	   
 	   .attend-class-time {
 	   	overflow: hidden;
 	   	  span {
@@ -157,7 +161,7 @@
 	   	  }
 	   }
 	   .course-content-text {
-	   	 height: 86px;background: #f9f9f9;padding-top: 5px;margin-bottom: 20px;
+	   	 height: 86px;padding-top: 5px;margin-bottom: 10px;
 	   	 span {
 			 width: 75px;line-height: 25px; padding-left: 10px;color: #666;
 	   	  }
@@ -166,13 +170,36 @@
 	   			li {
 	   				line-height: 26px; 
 	   				a {
-	   					display: inline-block;background: url(img/icon_conre.png) 0 7px no-repeat;margin-left: 20px;padding-left: 10px;color: #1e89e0;
+	   					display: inline-block;margin-right: 20px;
 	   				}
 	   			}
 	   		}
 	   }
+         //课程时间
+        .course-end-time {
+            height: 40px;line-height: 40px; background: #f9f9f9;
+            span {
+                display: inline-block;background: url(img/icon-time.png) 15px 13px no-repeat;padding-left: 40px;
+            }
+        }
+        //课程服务
+        .course-serve-list {
+             overflow: hidden;margin:10px 0;
+              span {
+			         width: 75px;line-height: 25px; padding-left: 10px;color: #666;
+	   	      } 
+             ul.xes-serve-list {
+                float:left;overflow: hidden;width: 515px;
+                li {
+                    float: left;display: inline;height: 24px;line-height: 22px;background: #fff;text-align: center; color: #ff8f1c;border:1px solid #ff8f1c;border-radius: 2px;padding:0 10px;margin-right:10px;margin-bottom: 10px;
+                    a {
+                      color: #ff8f1c;  
+                    }
+                }
+            }
+        }
         .course-content-teacher {
-				height: 50px; overflow: hidden;margin:10px 0;
+				height: 90px; overflow: hidden;margin:10px 0 20px;background: #f9f9f9;
 				span.f-left {
 					 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;padding-top:20px;color: #666;
 				}
@@ -180,7 +207,7 @@
                     width: 70px;font-size: 18px;padding-left: 20px;padding-top:0;
                 }
                 .main-teacher {
-                    margin-right: 15px;
+                    width:270px;margin-top:26px;margin-right: 15px;
                     span {
                         float: left;display: inline;
                         &.main-m {line-height: 40px;padding-left: 10px;color: #666;}
@@ -189,40 +216,52 @@
                             img {width:40px;height: 40px;border-radius: 50%;}
                         }
                         &.name-m {
-                            line-height: 40px;font-size: 14px;
+                            line-height:180%;color: #999;
+                            i {font-size: 14px;font-style: normal;color: #333;}
+                            strong{color: #e74c3c;}
                         }
                     }
                 }
                 .coach-teacher {
-                    border-left:1px solid #dcdcdc;padding:0 15px;
+                    border-left:1px solid #dcdcdc;padding:0 15px;margin-top:16px;
                    span {
                         float: left;display: inline;
-                        &.coach-c {line-height: 40px;padding-left: 10px;color: #666;}
+                        &.coach-c {line-height: 40px;padding-left: 10px;color: #666;padding-top:10px;}
                         &.avatar-c {
-                            height: 40px;width: 40px;overflow: hidden;margin-right: 10px;margin-left:5px;
-                            img {width:40px;height: 40px;border-radius: 50%;}
+                            height: 40px;width: 40px;overflow: hidden;margin-right: 10px;margin-left:5px;margin-top:10px;
+                            img {width:40px;height: 40px;border-radius: 50%;cursor: pointer;}
                         }
                         &.name-c {
-                            line-height: 40px;font-size: 14px;margin-right: 10px;
+                            line-height: 40px;font-size: 14px;margin-right: 10px;padding-top:10px;
                         }
                        &.info-c {
-                            line-height: 40px;font-size: 14px;color: #999;
-                           strong{color: #e74c3c;font-size: 12px;}
+                            line-height: 25px;font-size: 12px;color: #999;
+                            strong {
+                                display: inline-block;width:46px;height: 40px;line-height: 40px;background:url(/static/img/icon-rank.png) no-repeat;color: #fff;text-align: center;font-size: 20px;padding-left: 5px;
+                            }
                         }
                        &.coachAvatarInfo {display: none;}
                     } 
                 }
+                 ul.f-right {
+                    width:80px;overflow: hidden;margin-top:20px;
+                    li {
+                        float: right;width: 80px; text-align: center;list-style: none;color: #666;
+                        em {font-style: normal;font-size: 14px;}
+                        &.line {border-left: 1px solid #dcdcdc;}
+                    }
+                }
 			}
 	   .course-favorable-list {
-	   		height: 45px;padding-left: 10px;color: #666;
+	   		padding-left: 10px;color: #666;margin-bottom: 15px;
 	   		span {
 	   			display: inline-block; background: #e74c3c;color: #fff;margin-right: 10px;padding:0 5px;margin-bottom:3px;
 	   		}
 	   }
 	   .course-favorable-money {
-	   		height: 60px;background: #f9f9f9;margin-bottom: 15px;padding-top: 10px;position: relative;
+	   		height: 60px;margin-bottom: 5px;padding-top: 10px;position: relative;
 	   		.favrble-money {
-	   			width: 275px;padding-left: 10px;
+	   			padding-left: 10px;
 	   			span {
 	   				display:inline-block;padding-right: 10px;color: #666;
 	   				em {font-size: 26px;font-style: normal;}
@@ -230,14 +269,6 @@
 	   			del {
 	   				display:inline-block;color: #666;
 	   				em {font-size: 16px;font-style: normal;}
-	   			}
-	   		}
-	   		ul.f-right {
-	   			overflow: hidden;
-	   			li {
-	   				float: right;width: 100px; text-align: center;list-style: none;color: #666;
-	   				em {font-style: normal;}
-	   				&.line {border-left: 1px solid #dcdcdc;}
 	   			}
 	   		}
            .time-list-tips {
@@ -255,12 +286,15 @@
            &.course-favorable {
                height: 80px;
            }
+           span.tips {
+               display: inline-block;cursor:pointer;padding-left:10px;position: relative;top:-3px;
+           }
 	   }
 	   .course-button-list {
-	   	     overflow: hidden;
+	   	     overflow: hidden;position: absolute;left:0;bottom:0;z-index: 1;
             .btn {margin-right:10px;}
 	   		.button_apply {
-	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;
+	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;background: #fdeeeb;border:1px solid #e84c3d;color:#e84c3d;
 	   		}
 	   		.button_shop-cart {
 	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;margin-right: 10px;outline: none;
@@ -293,9 +327,9 @@
 	   &.course-video-back {
 			.course-content-text {height:auto;overflow: hidden;}
 			.course-content-teacher {
-				height: 80px; overflow: hidden;
+				height: 75px; margin:10px 0;
 				span.f-left {
-					 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;padding-top:20px;color: #666;
+					 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;padding-top:27px;color: #666;
 				}
                 span.open-listen-num {
                     width: 70px;font-size: 18px;padding-left: 20px;padding-top:0;
@@ -332,35 +366,48 @@
 				}
 			}
 			.open-course-button {
+                overflow: hidden;position: relative;
                 span.c-teacher {
                         width: 75px;
                         font-size: 12px;
                         line-height: 25px;
                         padding-left: 10px;
-                        padding-top: 10px;
+                        padding-top: 17px;
+                }
+                .ui_avatar_con {
+                    margin-top:0;
+                    .ui_avatar {
+                        width:125px;
+                        .avatar_items {
+                            li {width:125px;}
+                        }
+                    }
+                }
+                .course-button-list {
+                    left:415px;bottom:18px;
                 }
 			}	
 	   }
 	}
 		// 主讲老师和辅导老师----右侧
 
-	.course-right-teacher {
-		width: 240px;border-left: 1px solid #eaeaea;height: 400px;padding-left: 10px;
-		.main-teacher-title {
-			height: 30px;line-height: 30px;font-size: 16px; 
-		}
-        ul.xes-serve-list {
-            overflow: hidden;border-top: 1px dotted #eaeaea;width:110%;
-            li {
-                float: left;display: inline;width: 108px;height: 25px;line-height: 25px;background: #50c2e9;margin:15px 10px 0 0 ;text-align: center; color: #fff;  
-                a {
-                  color: #fff;  
-                }
-                &.disabled {
-                    background: #dcdcdc;
-                } 
-            }
-        }
+	//.course-right-teacher {
+		//width: 240px;border-left: 1px solid #eaeaea;height: 400px;padding-left: 10px;
+//		.main-teacher-title {
+//			height: 30px;line-height: 30px;font-size: 16px; 
+//		}
+//        ul.xes-serve-list {
+//            overflow: hidden;border-top: 1px dotted #eaeaea;width:110%;
+//            li {
+//                float: left;display: inline;width: 108px;height: 25px;line-height: 25px;background: #50c2e9;margin:15px 10px 0 0 ;text-align: center; color: #fff;  
+//                a {
+//                  color: #fff;  
+//                }
+//                &.disabled {
+//                    background: #dcdcdc;
+//                } 
+//            }
+//        }
 //		.main-teacher-list {
 //			overflow: hidden;border-bottom: 1px dotted #eaeaea;padding:5px 0 15px 0;margin-bottom: 10px;
 //			.main_teacher {
@@ -402,7 +449,7 @@
 //						border:none;
 //					}
 //		}
-	}
+	//}
 }
 // 课程详情页上半部分样式 end
 .columns-wrap {
@@ -414,13 +461,30 @@
 		float: right;display: inline;width: 240px;border: 1px solid #ccc;height: 500px;
 	}
 }
-
+.scroll-box-wrap {
+    overflow: hidden;
+    .scroll-box-nav {
+       width:1190px;height: 50px;margin:0 auto 20px;background: #f9f9f9;
+        .scroll-btn {
+            float: right;display: none;
+            span {
+                float: left;margin:10px;
+                &.money {
+                    color: #e74c3c;font-size: 20px;
+                }
+            }
+        }
+    }
+    &.rollbox {
+       position: fixed;top:0;left: 0;z-index: 1;width:100%;height:50px;background: #f9f9f9; 
+    }
+}
 .ui-nav-link {
-	height: 42px; border-bottom:1px solid #eaeaea;margin-bottom: 20px;
+	 float: left;overflow: hidden;
 	li {
-		float: left;width: 140px;line-height: 40px;list-style: none;font-size: 16px;text-align: center;position: relative;top:0px;z-index: 1;cursor: pointer;background: url(img/line.png) right 13px no-repeat;
+		float: left;width: 140px;line-height: 50px;list-style: none;font-size: 16px;text-align: center;position: relative;top:0px;z-index: 1;cursor: pointer;background: url(img/line.png) right 17px no-repeat;
 		&.current {
-			color: #1e89e0;border-bottom:2px solid #1e89e0;
+			color: #fff;background: #0082e4;
 		}
 	}
 	.last {
@@ -542,7 +606,7 @@
 				
 			}
 			.user-text-box {
-				float: right;display: inline;width: 840px;border: 1px solid #ededed;background: #fcfcfc;padding:15px;position: relative;
+				float: right;display: inline;width: 1115px;border: 1px solid #ededed;background: #fcfcfc;padding:15px;position: relative;
 				p {
 					font-size: 12px;
 				}
