--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1099,11 +1099,11 @@ ul,li{list-style: none;}
 }
 
 //直播筛选
-.container-body {
-    background: #f1f2f6;
+.container {
     .col-md-12 {
        width:1190px; overflow: hidden;
-        .add-selector-pic {width:1180px;overflow: hidden;}
+        .add-selector-pic {width:1050px;overflow: hidden;float:left;}
+        .add-selector-seo {width:120px;overflow: hidden;float:right;}
     }
     .mb10 {margin-bottom: 20px;}
 }
@@ -1135,7 +1135,7 @@ ul,li{list-style: none;}
     }
 }
 .select-subject-list {
-   height: 42px;background: #fff;
+   height: 42px;background: #f9f9f9;
     li {
         float: left;width:196px;height:40px;line-height: 40px;text-align: center;font-size: 16px;font-family: 'Microsoft YaHei';margin-top:1px;
         a {
@@ -1153,7 +1153,7 @@ ul,li{list-style: none;}
     height: 90px;border-bottom: 1px solid #ededed;
     div {float: left;font-family:  'Microsoft YaHei';font-size: 14px;}
     .rank-time {
-        width:375px;
+        width:400px;
         p.time {
             font-size: 22px;padding:12px 0 0 15px;
             strong{padding-left:10px;color: #e74c3c;font-weight: normal;}
