--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -238,6 +238,7 @@
                             line-height: 25px;font-size: 12px;color: #999;
                             strong {
                                 display: inline-block;width:46px;height: 40px;line-height: 40px;background:url(/static/img/icon-rank.png) no-repeat;color: #fff;text-align: center;font-size: 20px;padding-left: 5px;
+                                &.hotcourse {font-size: 12px;font-weight: normal;}
                             }
                         }
                        &.coachAvatarInfo {display: none;}
@@ -294,13 +295,13 @@
 	   	     overflow: hidden;position: absolute;left:0;bottom:0;z-index: 1;
             .btn {margin-right:10px;}
 	   		.button_apply {
-	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;background: #fdeeeb;border:1px solid #e84c3d;color:#e84c3d;
+	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;
 	   		}
 	   		.button_shop-cart {
-	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;margin-right: 10px;outline: none;
+	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;margin-right: 10px;outline: none;background: #fdeeeb;border:1px solid #e84c3d;color:#e84c3d;
 	   		}
            .disabled {
-               background: #bfbfbf;
+               width: 160px;height: 40px;border-radius: 2px;background: #bfbfbf;border:0;color: #fff;font-size: 18px;
            }
            .do_not_sign_up {
               width: 160px;height: 40px;font-size: 18px;border-radius: 2px;background: #bfbfbf;
@@ -833,6 +834,23 @@
          .coach-teacher-info {
             float: left;width:260px;line-height: 180%;border-left:1px solid #eaeaea;padding-left:7px;margin-top:10px;
         } 
+    }
+}
+//课程详情介绍锚点
+.feedBackAnchor {
+     width:140px;overflow: hidden;border:1px solid #dcdcdc;text-align: center;position: fixed;right:10px;bottom:10px;z-index: 1;
+    li {
+        height: 45px;line-height: 45px;font-size: 16px;font-family: 'Microsoft YaHei';
+        border-bottom: 1px solid #dcdcdc;
+        
+        &:last-child {
+            border-bottom:0;position: relative;
+            .fa {position: absolute;left:15px;top:15px;z-index: 2;}
+        }
+        &.current {
+            background: #0082e4;
+            a {color: #fff;}
+        }
     }
 }
 /*
