--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -822,6 +822,21 @@ ul,li{list-style: none;}
 			}
 		}
 	}
+    &.teacher-coach-bomb {
+        .dialog-down-wrap {
+            .dialog-border {
+                height: 80px;
+                .dialog-down {
+                    height: 80px;line-height: 80px;
+                    ul {
+                        li {
+                            img {width:60px;height: 60px;}
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 // 课程筛选页右边广告位
 .sideright-body{
@@ -952,6 +967,7 @@ ul,li{list-style: none;}
 	font-size: 12px;
 	color: #999999;
 	font-family: "SimSun";
+    margin-bottom: 10px;
 	p{
 		font-size: 12px;
 		line-height: 42px;	
@@ -1004,10 +1020,10 @@ ul,li{list-style: none;}
     padding:5px 10px;
     float:left;
     width:389px;
-    height: 156px;
+    height: 180px;
     border:1px solid #ededed;
     margin-right:10px;
-    margin-bottom: 10px;
+    margin-bottom:20px;
     position: relative;
     z-index: 1;
     .ui-avatar {
@@ -1022,10 +1038,21 @@ ul,li{list-style: none;}
                 line-height: 25px;
             }
             p.tip-for {
-                line-height: 25px;
+                line-height: 40px;
                 color: #666;
                 &.tip-for-list {
                     line-height: 180%;
+                }
+            }
+            p.tip-free {
+                 line-height: 50px;
+                font-size: 16px;
+                font-family: 'Microsoft YaHei';
+                span {
+                      color: #666;
+                }
+                strong {
+                   color: #e74c3c;  
                 }
             }
             p.tip-statistics {
@@ -1046,7 +1073,7 @@ ul,li{list-style: none;}
                 .ui-username {font-size: 16px;font-family: 'Microsoft YaHei';} 
             }
             p.tip-fans-list {
-                color: #666;
+                color: #666;line-height: 40px;
                 span {padding-right:10px;}
             }
         }
@@ -1101,7 +1128,7 @@ ul,li{list-style: none;}
 //直播筛选
 .container {
     .col-md-12 {
-       width:1190px; overflow: hidden;
+      overflow: hidden;
         .add-selector-pic {width:1050px;overflow: hidden;float:left;}
         .add-selector-seo {width:120px;overflow: hidden;float:right;}
     }
@@ -1150,39 +1177,39 @@ ul,li{list-style: none;}
 }
 
 .live-course-rank-list {
-    height: 90px;border-bottom: 1px solid #ededed;
+    height: 90px;border-bottom: 1px solid #ededed;overflow: hidden;
     div {float: left;font-family:  'Microsoft YaHei';font-size: 14px;}
     .rank-time {
-        width:400px;
+        width:350px;overflow: hidden;
         p.time {
             font-size: 22px;padding:12px 0 0 15px;
             strong{padding-left:10px;color: #e74c3c;font-weight: normal;}
         }
         p.difficulty {
-            padding-left:15px;
+            height:25px;line-height: 25px; overflow: hidden;padding-left:15px;
             span {color: #999;}
             a {padding-right:10px;}
         }
     }
     .rank-satisfy {
-        width:165px;line-height: 90px;color: #999;
+        width:150px;line-height: 90px;color: #999;overflow: hidden;
         strong{color: #e74c3c;padding-left:10px;}
     }
     .rank-coach {
-        width:185px;line-height: 90px;color: #999;
+        width:225px;line-height: 90px;color: #999;overflow: hidden;
          a {padding-right: 10px;}
         img {
             width:60px;height: 60px;border-radius: 50%;overflow: hidden;
         }
     }
     .rank-places {
-        width:180px;height: 40px;color: #999;padding-top:25px;
+        width:140px;height: 40px;color: #999;padding-top:25px;
         strong {
             display: inline-block;width:46px;height: 40px;line-height: 40px;background:url(img/icon-rank.png) no-repeat;color: #fff;text-align: center;font-size: 20px;margin-left:10px;padding-left: 5px;
         }
     }
     .rank-money {
-        width:150px;line-height: 90px;color: #999;
+        width:80px;line-height: 90px;color: #999;overflow: hidden;
         strong{color: #666;}
     }
     .rank-btn {
