--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -19,19 +19,55 @@
 .live-list{overflow: hidden;width: 100%;margin-bottom: 20px;}
 .live-card{float: left;width: 271px;margin-right: 35px;}
 .live-card:nth-child(4n){margin-right:0;}
-.live-course-hover{position: absolute;bottom: 0;height: 80px;}
+.live-course-hover{
+    position: absolute;bottom: 0;height: 80px;
+}
 .live-course-content{width: 260px;position: absolute;top:12px;left: 10px;color: #fff;font-size: 14px;text-overflow: ellipsis}
 .live-course-box{position: relative;display: inline-block;}
+.live-course-box:hover .live-course-title{
+    height: 198px;
+}
+.bg-red{
+    background: #e74c3c;
+};
+.bg-yellow{
+    background: #ffa700;
+};
+.bg-blue{
+    background: #3bafda;
+}
+.join-live{
+    cursor: pointer;
+    transition:all .3s;
+    color: transparent;
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+    width:271px;
+    text-align: center;
+    display: block;
+    border-radius: 5px;
+}
+.live-course-box:hover .join-live{
+    top: 80px;
+    bottom: 80px;
+    width: 150px;
+    margin: 0 60px;
+    line-height: 38px;
+    color: #fff;
+}
 .live-course-box img{width: 271px;height: 198px;}
 .live-teacher-photo{margin-top: 20px;}
-.live-course-title{height: 30px;width: 271px;position: absolute;bottom: 0;background-color: #000;opacity: 0.5;filter:alpha(opacity=50);}
+.live-course-title{transition: all .15s;height: 0px;width: 271px;position: absolute;top: 0;background-color: #000;opacity: 0.7;filter:alpha(opacity=50);}
 .live-course-show-title{height: 30px;width: 271px;position: absolute;bottom: 0;color: #fff;font-size: 14px;text-align: center;line-height: 30px;overflow: hidden;}
 .live-time-tip{width: 271px;background-color: #f9f9f9;color: #ed5565;}
+.live-time-tip span.teacher{ font-size: 14px;color: #a0a0a0;margin-left: 10px};
 .live-time-tip-container{line-height: 30px;}
-.live-time-tip-container span{font-size: 16px;margin-left: 10px;}
+.live-time-tip-container span{color:#333333; font-size: 16px;margin-left: 10px;}
+.live-time-tip-container span.watchNum{font-size: 12px;color: #666}
 .live-time-tip-container img{margin-right: 9px;}
-.live-time-tip-container p{
-    display: inline-block;font-size: 12px;color: #666;margin-right: 5px;float: right;
+.live-time-tip-container p{margin-bottom: 0;
+    display: inline-block;font-size: 12px;color: #333;margin-right: 5px;float: right;
     .fa {
         margin-right: 5px;
         color: #ddd;
