--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1313,7 +1313,7 @@ ul,li{list-style: none;}
     }
 }
 .select-subject-list {
-   height: 42px;background: #f9f9f9;
+   height: 42px;background: #f9f9f9;border-bottom: 1px solid #ededed;
     li {
         float: left;width:196px;height:40px;line-height: 40px;text-align: center;font-size: 16px;font-family: 'Microsoft YaHei';margin-top:1px;
         a {
@@ -1333,7 +1333,7 @@ ul,li{list-style: none;}
     .rank-time {
         width:350px;overflow: hidden;
         p.time {
-            font-size: 22px;padding:12px 0 0 15px;
+            font-size: 20px;padding:12px 0 0 15px;
             strong{padding-left:10px;color: #e74c3c;font-weight: normal;}
         }
         p.difficulty {
@@ -1350,7 +1350,7 @@ ul,li{list-style: none;}
         width:225px;line-height: 90px;color: #999;overflow: hidden;
          a {padding-right: 10px;}
         img {
-            width:60px;height: 60px;border-radius: 50%;overflow: hidden;
+            width:60px;height: 60px;border-radius: 50%;overflow: hidden; margin-left:6px;
         }
     }
     .rank-places {
