修改直播筛选页样式

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1015,7 +1015,6 @@ ul,li{list-style: none;}
 	padding-left: 0;
 	background: #fcfcfc;
 	li {
-		cursor: pointer;
 		float: left;
 		font-size: 12px;
 		list-style: outside none none;
@@ -1350,7 +1349,7 @@ ul,li{list-style: none;}
         width:225px;line-height: 90px;color: #999;overflow: hidden;
          a {padding-right: 10px;}
         img {
-            width:60px;height: 60px;border-radius: 50%;overflow: hidden; margin-left:6px;
+            width:60px;height: 60px;border-radius: 50%;overflow: hidden; margin-left:6px;float:right;margin:15px 10px 0 0;
         }
     }
     .rank-places {
@@ -1367,6 +1366,7 @@ ul,li{list-style: none;}
         width:128px;padding-top: 29px;
         a.btn {
             background: #e74c3c;color: #fff;width:98px;height: 32px;text-align: center;
+            &.btn-gray {background: #bfbfbf;}
         }
     }
 }
