--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1328,18 +1328,21 @@ ul,li{list-style: none;}
 }
 
 .live-course-rank-list {
-    height: 90px;border-bottom: 1px solid #ededed;overflow: hidden;
-    div {float: left;font-family:  'Microsoft YaHei';font-size: 14px;}
+    width:1190px;height: 90px;overflow: hidden;margin-bottom: 10px;background: #f9f9f9;
+    div {float: left;font-family:  'Microsoft YaHei';font-size: 12px;}
     .rank-time {
-        width:350px;overflow: hidden;
+        width:500px;overflow: hidden;
         p.time {
-            font-size: 20px;padding:12px 0 0 15px;
+            font-size: 18px;padding-left:15px;
             strong{padding-left:10px;color: #e74c3c;font-weight: normal;}
+            span {
+                display: inline-block;padding-right:5px;
+            }
+            .satisfy {color: #999;font-size: 12px;}
         }
         p.difficulty {
-            height:25px;line-height: 25px; overflow: hidden;padding-left:15px;
-            span {color: #999;}
-            a {padding-right:10px;}
+            height:35px;line-height: 50px; overflow: hidden;padding-left:15px;color: #666;
+            a {padding-right:10px;color: #666;}
         }
     }
     .rank-satisfy {
@@ -1354,17 +1357,17 @@ ul,li{list-style: none;}
         }
     }
     .rank-places {
-        width:140px;height: 40px;color: #999;padding-top:25px;
+        width:140px;height: 40px;color: #999;padding-top:22px;
         strong {
-            display: inline-block;width:46px;height: 40px;line-height: 40px;background:url(img/icon-rank.png) no-repeat;color: #fff;text-align: center;font-size: 20px;margin-left:10px;padding-left: 5px;
+            display: inline-block;width:46px;height: 40px;line-height: 40px;background:url(img/icon-rank.png) no-repeat;color: #fff;text-align: center;font-size: 20px;padding-left: 5px;
         }
     }
     .rank-money {
-        width:80px;line-height: 90px;color: #999;overflow: hidden;
+        width:70px;line-height: 90px;color: #999;overflow: hidden;
         strong{color: #666;}
     }
     .rank-btn {
-        width:128px;padding-top: 29px;
+        width:98px;padding-top: 29px;
         .btn {
             background: #e74c3c;color: #fff;width:98px;height: 32px;text-align: center;
             &.btn-gray {background: #bfbfbf;}
