--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -341,6 +341,8 @@ ul.grade-list {
             width: 290px;
             background: #fff;
             margin-bottom: 20px;
+            float: left;
+            margin-right: 10px;
             .live-time-tip{
                 .live-time-tip-container{
                     line-height: 22px;
@@ -389,6 +391,12 @@ ul.grade-list {
             .live-course-box{
                 overflow: hidden;
                 position: relative;
+                div.success_join{
+                    top:0;
+                    a{
+                        background: #bfbfbf;
+                    }
+                }
                 .live-course-title{
                     position: absolute;
                     top: -198px;
