--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -15,7 +15,7 @@ Helvetica,
 sans-serif;
 html,
 body {
-    font-family: "微软雅黑", Helvetica, 'Source Sans Pro', sans-serif;background: #f8f8f8;
+    font-family: "微软雅黑", Helvetica, 'Source Sans Pro', sans-serif;
 }
 body{
     overflow-y: scroll;
@@ -80,6 +80,7 @@ a,button,.btn{
 }
 .container {
     padding: 0;
+    background: #f8f8f8;
 }
 .top {
     &.m10 {
