--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -20,6 +20,9 @@ body {
 body{
     overflow-y: scroll;
 }
+.wrap{
+    background: #f8f8f8;
+}
 @fa: "Arial";
 @fg: "Georgia";
 @ft: "Tahoma";
@@ -80,7 +83,6 @@ a,button,.btn{
 }
 .container {
     padding: 0;
-    background: #f8f8f8;
 }
 .top {
     &.m10 {
@@ -225,9 +227,6 @@ a,button,.btn{
     height: 60px;
     overflow: hidden;
     margin-top: 20px;
-    &:nth-child(3){
-        margin-top: 0;
-    }
     h6 {
         position: relative;
         float: left;
@@ -338,10 +337,11 @@ ul.grade-list {
     .live-content-action {
         width: 110%;
         overflow: hidden;
-        .live-card {
+        
+}
+.live-card{
             width: 290px;
             background: #fff;
-            margin-bottom: 20px;
             float: left;
             margin-right: 10px;
             .live-time-tip{
@@ -351,10 +351,17 @@ ul.grade-list {
                     box-sizing: border-box;
                     padding: 16px 10px;
                     margin-right: 10px;
-                    span{
+                    a{
                         color: #333;
                         font-size: 16px;
                         line-height: 16px;
+                        &:hover{
+                            text-decoration: underline;
+                        }
+                    }
+                    &>span{
+                        font-size: 14px;
+                        float: right;
                     }
                     p{
                         margin-bottom: 0;
@@ -376,7 +383,6 @@ ul.grade-list {
                                 font-size: 12px;
                                 color: #999;
                                 position: relative;
-                                top: 3px;
                                 font-size: 14px;
                             }
                         }
@@ -399,6 +405,7 @@ ul.grade-list {
                     }
                 }
                 .live-course-title{
+                    display: block;
                     position: absolute;
                     top: -198px;
                     height: 198px;
@@ -407,7 +414,7 @@ ul.grade-list {
                     transition:top .3s linear;
                     text-align: center;
                     line-height: 198px;
-                    a{
+                    span{
                         padding: 12px 20px;
                         border-radius: 3px;
                         color:#fff;
@@ -423,7 +430,6 @@ ul.grade-list {
         .live-teacher-photo {
             margin-top:0;
         }
-}
 .page-turn {
     position: absolute;
     top: -40px;
